fixed overlaping style

--- a/src/CSS/Student.css
+++ b/src/CSS/Student.css
@@ -28,7 +28,7 @@ rgba(72, 83, 205, 0.84) 43.03%,
     border: none;
 }
 
-.enroll-btn{
+.enroll-btn-student{
     border-radius: 20px;
 background: #4853CD;
 box-shadow: 6px 6px 4px 0px rgba(0, 0, 0, 0.27);
